feat: adding routes to return majors
